@@ -1,5 +1,10 @@
 Changes with Apache 2.0.40
 
+  *) mod_ext_filter: Ignore any content-type parameters when checking if
+     the response should be filtered.  Previously, "intype=text/html"
+     wouldn't match something like "text/html;charset=8859_1".
+     [Jeff Trawick]
+
   *) mod_ext_filter: Set up environment variables for external programs.
      [Craig Sebenik <craig@netapp.com>]
 
